[package]
name = "tigr"
version = "0.19.1"
authors = ["Roy Brunton <notnurbyor@googlemail.com>"]
edition = "2021"
exclude = ["examples/*"]

# Option A workspace: the `tigr` package stays the root crate (so the
# release/Pages workflows and `wasm-pack build` still target it
# unchanged); the language server is an additional member. Its deps
# (tokio, tower-lsp) never enter a `--bin tigr` or wasm build because
# nothing in this package depends on that crate. resolver = "2" matches
# the package edition and silences cargo's workspace-default warning.
[workspace]
members = ["crates/tigr-lsp"]
resolver = "2"

[lib]
# `rlib` backs the `tigr` binary and the test harness; `cdylib` is the
# linkage `wasm-bindgen` needs to emit the playground's `.wasm`.
crate-type = ["cdylib", "rlib"]

# Cross-target dependencies — pure Rust, compile everywhere including
# `wasm32-unknown-unknown`.
[dependencies]
indexmap = "2"
# v0.13 — backs the arbitrary-precision `BigInt` value type. num-integer
# and num-traits are transitive deps of num-bigint; declared explicitly
# so their traits (`Integer`, `ToPrimitive`, `Zero`, `Signed`, `Pow`) can
# be `use`d directly without relying on a re-export.
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"

# Native-only dependencies — terminal IO, sockets, TLS, and the async
# reactor have no `wasm32-unknown-unknown` equivalent, so the browser
# playground build excludes them (the `Net`/`Os` modules and the
# rustyline REPL loop are `#[cfg]`-gated out to match).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "14"
# v0.15 — TLS for the `Net` module's encrypted client connections.
# `default-features = false` + `ring` selects the `ring` crypto
# provider over the default `aws-lc-rs`, which would pull in a C
# toolchain (cmake / NASM). `rustls-native-certs` loads the host OS
# trust store so enterprise / custom CAs work and the root set never
# goes stale — unlike a bundled `webpki-roots` snapshot.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8"
# Phase B (v0.x green-threads) — the async-IO reactor. `mio` wraps
# epoll / kqueue so one reactor thread can wait on thousands of socket
# fds at once, instead of one worker thread per parked socket op.
# `os-poll` gives `Poll`/`Waker`; `os-ext` gives `SourceFd` (we register
# raw fds from `std::net` sockets rather than migrating to `mio::net`).
mio = { version = "1", features = ["os-poll", "os-ext"] }

# wasm32-only dependencies — the `wasm-bindgen` glue for the browser
# playground (see `src/wasm.rs`).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
# Collect on every VM dispatch step — stress mode that turns any
# missing GC root into an immediate stale-handle panic.
gc-torture = []
# Public embedding API (`tigr::embed::Session`) for driving a
# persistent VM from a Rust host. Off by default — additive surface.
embed = []
