[package]
name = "tigr"
version = "0.24.0"
authors = ["Roy Brunton <notnurbyor@googlemail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["examples/*"]

# Option A workspace: the `tigr` package stays the root crate (so the
# release/Pages workflows and `wasm-pack build` still target it
# unchanged); the language server is an additional member. Its deps
# (tokio, tower-lsp) never enter a `--bin tigr` or wasm build because
# nothing in this package depends on that crate. resolver = "2" matches
# the package edition and silences cargo's workspace-default warning.
[workspace]
members = ["crates/tigr-lsp"]
resolver = "2"

[lib]
# `rlib` backs the `tigr` binary and the test harness; `cdylib` is the
# linkage `wasm-bindgen` needs to emit the playground's `.wasm`.
crate-type = ["cdylib", "rlib"]

# Cross-target dependencies — pure Rust, compile everywhere including
# `wasm32-unknown-unknown`.
[dependencies]
indexmap = "2"
# v0.13 — backs the arbitrary-precision `BigInt` value type. num-integer
# and num-traits are transitive deps of num-bigint; declared explicitly
# so their traits (`Integer`, `ToPrimitive`, `Zero`, `Signed`, `Pow`) can
# be `use`d directly without relying on a re-export.
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"

# Native dependencies that work on every non-wasm target, Windows
# included — sockets / TLS, the async-IO reactor, and the REPL editor.
# Only `wasm32` (no browser sockets, HTML-driven REPL console) drops
# them.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# `rustyline` (the REPL line editor) is portable.
rustyline = "14"
# v0.15 — TLS for the `Net` module's encrypted client connections.
# `default-features = false` + `ring` selects the `ring` crypto
# provider over the default `aws-lc-rs`, which would pull in a C
# toolchain (cmake / NASM). `rustls-native-certs` loads the host OS
# trust store — the Windows certificate store included — so enterprise /
# custom CAs work and the root set never goes stale, unlike a bundled
# `webpki-roots` snapshot. On Windows `ring` assembles its x86_64 crypto
# with NASM; the release workflow installs it on that runner.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8"
# The async-IO reactor (Phase B, green-threads). `polling` (smol-rs)
# wraps epoll / kqueue / IOCP-AFD behind one readiness API, so a single
# reactor thread can wait on thousands of socket fds at once instead of
# one worker thread per parked op — and it does so on every platform,
# Windows included (`mio` could not register externally-created
# `std::net` sockets there). We register raw fds / sockets directly in
# oneshot mode, re-arming per event; see `src/vm/reactor.rs`.
polling = "3"

# wasm32-only dependencies — the `wasm-bindgen` glue for the browser
# playground (see `src/wasm.rs`). Optional and pulled in by the
# `playground` feature, so an embedder building for a non-wasm-bindgen
# web host (macroquad's plain-wasm loader) can drop it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[features]
# On by default so `wasm-pack build` / the Pages release workflow keep
# emitting the browser playground unchanged.
default = ["playground"]
# Collect on every VM dispatch step — stress mode that turns any
# missing GC root into an immediate stale-handle panic.
gc-torture = []
# Public embedding API (`tigr::embed::Session`) for driving a
# persistent VM from a Rust host. Off by default — additive surface.
embed = []
# The browser playground's `wasm-bindgen` entry points (`src/wasm.rs`)
# and the `Math.random` rng entropy path. An embedder targeting a
# plain-wasm host builds `--no-default-features` so this glue, and its
# `wasm-bindgen` imports, stay out of the module.
playground = ["dep:wasm-bindgen"]
